# pkg-version

./: .travis.yml  README.md  pkg-version.cabal  rpm-version.cabal
src/Data/: PkgVersion.hs  RpmVersion.hs
src/Data/PkgVersion/: AVersion.hs  Class.hs
src/Data/PkgVersion/Internal/: DpkgVersion.hs  PkgConfigVersion.hs  PkgVersion.hs  RpmVerCmp.hs  RpmVersion.hs
src/Data/RpmVersion/Internal/: RpmVerCmp.hs  RpmVersion.hs
test/: TestCase.hs
