name:                 pkg-version
version:              0.1.0.0
synopsis:             Data types for versions used by RPM and DPKG packages
description:
  Data types for version strings used by RPM and DPKG package manager for
  packages.

homepage:             https://github.com/trskop/pkg-version
license:              BSD3
license-file:         LICENSE
author:               Peter Trško
maintainer:           peter.trsko@gmail.com
copyright:            Copyright (c) 2014-2015, Peter Trško
category:             Data
build-type:           Simple
cabal-version:        >=1.10

extra-source-files:
    ChangeLog.md
  , README.md

flag pedantic
  description:          Pass additional warning flags to GHC.
  default:              False
  manual:               True

library
  hs-source-dirs:       src
  default-language:     Haskell2010

  exposed-modules:
      Data.PkgVersion
    , Data.PkgVersion.AVersion
    , Data.PkgVersion.Class
    , Data.PkgVersion.Internal.DpkgVersion
    , Data.PkgVersion.Internal.PkgConfigVersion
    , Data.PkgVersion.Internal.PkgVersion
    , Data.PkgVersion.Internal.RpmVerCmp
    , Data.PkgVersion.Internal.RpmVersion

  other-extensions:
      DeriveDataTypeable
    , DeriveGeneric
    , NoImplicitPrelude

  build-depends:
    -- {{{ Distributed w/ GHC or Haskell Platform
      base >=4.7 && <4.8
    , text >=1.1 && <1.3
    , transformers >= 0.2.0.0 && < 0.5
    -- }}} Distributed w/ GHC or Haskell Platform
    , data-default-class ==0.0.*

  ghc-options:          -Wall
  if flag(pedantic)
    ghc-options:
      -fwarn-tabs
      -fwarn-implicit-prelude
      -fwarn-missing-import-lists
--    -Werror

source-repository head
  type:                 git
  location:             git://github.com/trskop/pkg-version.git
